dark mode fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,23 @@ body {
           color: rgb(177, 177, 177) !important;
         }
         & h2 {
-          color: white !important;
+          color: rgb(149, 149, 149) !important;
+        }
+      }
+      & button {
+        border: 1px solid rgb(97, 97, 97) !important;
+        background-color: rgb(90, 90, 90);
+        color: rgb(218, 218, 218) !important;
+        &.disabled {
+          color: rgb(45, 45, 45) !important;
+
+        }
+        &:hover {
+          color: rgb(45, 45, 45) !important;
+              border: 1px solid rgb(174, 174, 174) !important;
+        }
+        &.btn-back {
+          border: 0 !important;
         }
       }
       & form {
@@ -23,16 +39,18 @@ body {
           input {
             background-color: #202020 !important;
           }
+          & .valid {
+            color: #45d245 !important
+          }
         }
       }
     }
-  }
-}
-
-.right-panel {
-  & div {
-    & div {
-      color: white !important;
+    & .right-panel {
+      & div {
+        & div {
+          color: rgb(255, 255, 255) !important;
+        }
+      }
     }
   }
 }
